[tool.poetry]
name = "hpewarrantylookup"
version = "0.1.0"
description = ""
authors = ["Michael Rose Jr. <michael@michaelrosejr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1.5"
webdriver-manager = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
